feat(connector-corda): support JVM 17 Cordapps
1. The runner stage of the corda connector JVM image now uses an up to
date JRE instead of the very old JDK 8 which the builder stage is still
stuck on.
2. This enables the connector to load and use contract .jar files which
were built with the newer JDK as well.
3. This is important because we would like to support as wide range of
contract/flow invocation use cases as possible and also recently there's
been some changes in the Corda official samples repositories where the
contracts are being upgraded to JVM 17 as well so this will become more
and more relevant as a use-case in the near future.

Signed-off-by: Peter Somogyvari <peter.somogyvari@accenture.com>